--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.database-platform=org.hibernate.dialect.MariaDB53Dialect
+spring.servlet.multipart.max-request-size=215MB
+spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.file-size-threshold=2KB
+spring.servlet.multipart.enable=true
+file.upload-dir=./uploads
