--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,15 +3,17 @@ spring.datasource.username=root
 spring.datasource.password=
 
 #utilizar em produ\u00c3\u00a7\u00c3\u00a3o
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 
 #utilizar em desenvolvimento (apaga o banco a cada inicializa\u00c3\u00a7\u00c3\u00a3o )
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.database-platform=org.hibernate.dialect.MariaDB53Dialect
-spring.servlet.multipart.max-request-size=215MB
-spring.servlet.multipart.max-file-size=200MB
+
+spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=2KB
-spring.servlet.multipart.enable=true
+spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.max-request-size=215MB
+
 file.upload-dir=./uploads
